--- a/index.html
+++ b/index.html
@@ -2,18 +2,29 @@
 <html>
 <head>
 
+  <meta charset="utf-8">
   <script src="js/main.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
 
 </head>
 
 <body>
-  <div class="window">
-    <div class="window-bar"></div>
-    <div class="window-body">
-      <p>Hello!</p>
+  <div id="window">
+    <div id="window-bar">
+      <span class="window-button" id="window-button-close"></span>
+      <span class="window-button" id="window-button-minimize"></span>
+      <span class="window-button" id="window-button-maximize"></span>
+    </div>
+    <div id="window-body">
+      <p class="code">
+        <span>
+        $ whoami <br/><br/>
+        </span>
+        Hi, I'm Lukáš! <br/><br/>
+        This is a placeholder for some hopefully interesting stuff.
+      </p>
     </div>
   </div>
 </body>
-
+<p id="photo-attribution">Photo by Lachlan Ross from Pexels</p>
 </html>
