Add very basic typing animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="utf-8">
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="js/main.js"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
 
 </head>
@@ -16,13 +16,7 @@
       <span class="window-button" id="window-button-maximize"></span>
     </div>
     <div id="window-body">
-      <p class="code">
-        <span>
-        $ whoami <br/><br/>
-        </span>
-        Hi, I'm Lukáš! <br/><br/>
-        This is a placeholder for some hopefully interesting stuff.
-      </p>
+      <p class="code" id="terminal-text"></p>
     </div>
   </div>
 </body>
