make a little more responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div id="container">
   <div id="window">
     <div id="window-bar">
       <span class="window-button" id="window-button-close"></span>
@@ -19,6 +20,7 @@
       <p class="code" id="terminal-text"></p>
     </div>
   </div>
+  <p id="photo-attribution">Photo by Lachlan Ross from Pexels</p>
+  </div>
 </body>
-<p id="photo-attribution">Photo by Lachlan Ross from Pexels</p>
 </html>
